[package]
name = "file-opt"
version = "0.1.0"
authors = ["coolu <2209940496@qq.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
rand_xorshift = "0.2.0"
memmap = "0.7"

[dev-dependencies]
digest = { version = "0.9", features = ["dev", "std"] }
sha2 = "0.9.1"
rand = "0.7.3"
rand_xorshift = "0.2.0"
criterion = "0.3"
log = "0.4.7"

[lib]
bench = false

[[bench]]
name = "random_read"
harness = false
